--- a/simple-todos.html
+++ b/simple-todos.html
@@ -1,14 +1,25 @@
 <head>
-  <title>simple-todos</title>
+  <title>Todo List</title>
 </head>
 
 <body>
-  <h1>Welcome to Meteor!</h1>
+  <div class="container">
 
-  {{> hello}}
+    <header>
+
+      <h1>Todo List</h1>
+
+    </header>
+
+    <ul>
+      {{#each tasks}} {{> task}} {{/each}}
+    </ul>
+
+  </div>
+
 </body>
 
-<template name="hello">
-  <button>Click Me</button>
-  <p>You've pressed the button {{counter}} times.</p>
+
+<template name="task">
+  <li>{{text}}</li>
 </template>
