--- a/simple-todos.html
+++ b/simple-todos.html
@@ -9,8 +9,13 @@
 
       <h1>Todo List</h1>
 
-    </header>
+      <form class="new-task">
 
+        <input type="text" name="text" placeholder="Type to add new tasks" />
+
+      </form>
+
+    </header>
     <ul>
       {{#each tasks}} {{> task}} {{/each}}
     </ul>
@@ -21,5 +26,9 @@
 
 
 <template name="task">
-  <li>{{text}}</li>
+  <li class="{{#if checked}}checked{{/if}}">
+  <button class="delete">&times;</button>
+  <input type="checkbox" checked="{{checked}}" class="toggle-checked" />
+  <span class="text">{{text}}</span>
+</li>
 </template>
