--- a/simple-todos.html
+++ b/simple-todos.html
@@ -9,14 +9,18 @@
 
       <h1>Todo List</h1>
 
+      <label class="hide-completed">
+        <input type="checkbox" checked="{{hideCompleted}}" />
+        Hide Completed Tasks
+      </label>
+
+
       <form class="new-task">
-
         <input type="text" name="text" placeholder="Type to add new tasks" />
-
       </form>
 
     </header>
-    
+
     <ul>
       {{#each tasks}} {{> task}} {{/each}}
     </ul>
