--- a/simple-todos.html
+++ b/simple-todos.html
@@ -7,7 +7,8 @@
 
     <header>
 
-      <h1>Todo List</h1>
+      
+      <h1>Todo List ({{incompleteCount}})</h1>
 
       <label class="hide-completed">
         <input type="checkbox" checked="{{hideCompleted}}" />
