--- a/simple-todos.html
+++ b/simple-todos.html
@@ -7,7 +7,7 @@
 
     <header>
 
-      
+
       <h1>Todo List ({{incompleteCount}})</h1>
 
       <label class="hide-completed">
@@ -15,6 +15,14 @@
         Hide Completed Tasks
       </label>
 
+      {{> loginButtons}}
+      {{#if currentUser}}
+
+      <form class="new-task">
+        <input type="text" name="text" placeholder="Type to add new tasks" />
+      </form>
+
+      {{/if}}
 
       <form class="new-task">
         <input type="text" name="text" placeholder="Type to add new tasks" />
@@ -35,6 +43,6 @@
   <li class="{{#if checked}}checked{{/if}}">
   <button class="delete">&times;</button>
   <input type="checkbox" checked="{{checked}}" class="toggle-checked" />
-  <span class="text">{{text}}</span>
+  <span class="text"><strong>{{username}}</strong> - {{text}}</span>
 </li>
 </template>
